{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 24,
  "lineage": "25ece12b-c2fb-f560-0882-028fd1d69ac5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_vpc1_to_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-12T04:49:13.815-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sp-terra-project/global/firewalls/allow-vpc1-to-vpc2",
            "log_config": [],
            "name": "allow-vpc1-to-vpc2",
            "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/spatil-vpc-1",
            "priority": 1000,
            "project": "sp-terra-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/firewalls/allow-vpc1-to-vpc2",
            "source_ranges": [
              "10.2.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_vpc2_to_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-03-12T04:49:14.148-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sp-terra-project/global/firewalls/allow-vpc2-to-vpc1",
            "log_config": [],
            "name": "allow-vpc2-to-vpc1",
            "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/spatil-vpc-2",
            "priority": 1000,
            "project": "sp-terra-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/firewalls/allow-vpc2-to-vpc1",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/zones/us-central1-a/disks/spatil-vm-vpc1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-03-12T05:21:56.696-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/sp-terra-project/zones/us-central1-a/instances/spatil-vm-vpc1",
            "instance_id": "2627119519687819915",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "GLz-5PaHTcU=",
            "name": "spatil-vm-vpc1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/spatil-vpc-1",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/regions/us-central1/subnetworks/subnet-1",
                "subnetwork_project": "sp-terra-project"
              }
            ],
            "project": "sp-terra-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/zones/us-central1-a/instances/spatil-vm-vpc1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc1",
            "google_compute_subnetwork.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/zones/asia-south1-a/disks/spatil-vm-vpc2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-03-12T05:21:57.590-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/sp-terra-project/zones/asia-south1-a/instances/spatil-vm-vpc2",
            "instance_id": "1859342472841052811",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "GLz-5PaHTcU=",
            "name": "spatil-vm-vpc2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/spatil-vpc-2",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/regions/asia-south1/subnetworks/subnet-2",
                "subnetwork_project": "sp-terra-project"
              }
            ],
            "project": "sp-terra-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/zones/asia-south1-a/instances/spatil-vm-vpc2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc2",
            "google_compute_subnetwork.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sp-terra-project/global/networks/spatil-vpc-1",
            "mtu": 0,
            "name": "spatil-vpc-1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8629721467040090690",
            "numeric_id": "8629721467040090690",
            "project": "sp-terra-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/spatil-vpc-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sp-terra-project/global/networks/spatil-vpc-2",
            "mtu": 0,
            "name": "spatil-vpc-2",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8783816939341138498",
            "numeric_id": "8783816939341138498",
            "project": "sp-terra-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/spatil-vpc-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-12T04:59:02.945-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/sp-terra-project/regions/us-central1/subnetworks/subnet-1",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/spatil-vpc-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sp-terra-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/regions/us-central1/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7774800740643293673
          },
          "dependencies": [
            "google_compute_network.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-12T04:49:21.295-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/sp-terra-project/regions/asia-south1/subnetworks/subnet-2",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/spatil-vpc-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sp-terra-project",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/regions/asia-south1/subnetworks/subnet-2",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6395859537021946414
          },
          "dependencies": [
            "google_compute_network.vpc2"
          ]
        }
      ]
    }
  ]
}